test_suite/tests/ui/enum-representation/untagged-struct.stderr
error: #[serde(untagged)] can only be used on enums
  --> $DIR/untagged-struct.rs:12:10
   |
12 | #[derive(Serialize)]
   |          ^^^^^^^^^

error: aborting due to previous error

